--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "pinia": "^2.0.11",
     "quasar": "^2.6.6",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-router": "^4.0.0",
+    "rollup": "2.0.0",
+    "postcss": "8.1.0"
   },
   "devDependencies": {
-    "@quasar/app-vite": "^1.0.0-alpha.0",
+    "@quasar/app-vite": "^1.0.0-beta.14",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.1.0",
