--- a/package.json
+++ b/package.json
@@ -8,17 +8,23 @@
   "scripts": {
     "lint": "eslint --ext .js,.vue ./",
     "format": "prettier --write \"**/*.{js,vue,scss,html,md,json}\" --ignore-path .gitignore",
-    "test": "echo \"No test specified\" && exit 0"
+    "test": "echo \"No test specified\" && exit 0",
+    "build": "quasar build",
+    "start": "node server.js",
+    "heroku-postbuild": "yarn && yarn build"
   },
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "connect-history-api-fallback": "^1.6.0",
+    "express": "^4.18.0",
     "pinia": "^2.0.11",
+    "postcss": "8.1.0",
     "quasar": "^2.6.6",
-    "vue": "^3.0.0",
-    "vue-router": "^4.0.0",
     "rollup": "2.0.0",
-    "postcss": "8.1.0"
+    "serve-static": "^1.15.0",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0"
   },
   "devDependencies": {
     "@quasar/app-vite": "^1.0.0-beta.14",
